可自定义模型、增加docker-compsoe启动

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,16 @@ GITHUB_TOKEN="your_github_token"
 # Gemini API Key
 GEMINI_API_KEY="your_gemini_api_key"
 
+# Gemini Custom Base URL (optional - for proxy/relay services)
+# Example: GEMINI_BASE_URL="https://your-proxy.com"
+GEMINI_BASE_URL=""
+
+# Gemini Model (optional - default is "gemini-3-flash-preview")
+GEMINI_MODEL="gemini-3-flash-preview
+
 # Caching Vercel KV
-KV_REST_API_READ_ONLY_TOKEN="your_kv_rest_api_read_only_token"
-KV_REST_API_TOKEN="your_kv_rest_api_token"
-KV_REST_API_URL="your_kv_rest_api_url"
-KV_URL="your_kv_url"
-REDIS_URL="your_redis_url"
+#KV_REST_API_READ_ONLY_TOKEN="your_kv_rest_api_read_only_token"
+#KV_REST_API_TOKEN="your_kv_rest_api_token"
+#KV_REST_API_URL="your_kv_rest_api_url"
+#KV_URL="your_kv_url"
+#REDIS_URL="your_redis_url"
