--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ GEMINI_API_KEY="your_gemini_api_key"
 GEMINI_BASE_URL=""
 
 # Gemini Model (optional - default is "gemini-3-flash-preview")
-GEMINI_MODEL="gemini-3-flash-preview
+GEMINI_MODEL="gemini-3-flash-preview"
 
 # Caching Vercel KV
 #KV_REST_API_READ_ONLY_TOKEN="your_kv_rest_api_read_only_token"
